Finish ControllerProject coverage