@@ -2,16 +2,19 @@ package com.dev.timetracker.controller;
 
 import com.dev.timetracker.dto.project.DTOListProject;
 import com.dev.timetracker.dto.project.DTOUpdateProject;
+import com.dev.timetracker.dto.report.DTOUserTime;
+import com.dev.timetracker.dto.task.DTOListTask;
 import com.dev.timetracker.entity.EntityProject;
+import com.dev.timetracker.entity.EntityTask;
+import com.dev.timetracker.entity.EntityUser;
 import com.dev.timetracker.repository.RepositoryProject;
 import com.dev.timetracker.repository.RepositoryTask;
 import com.dev.timetracker.repository.RepositoryUser;
 import com.dev.timetracker.service.ReportService;
+import com.dev.timetracker.utility.category.Tag;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.apache.tomcat.util.http.parser.EntityTag;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -25,19 +28,16 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static com.dev.timetracker.mocks.ProjectMocks.*;
 import static com.dev.timetracker.mocks.TaskMocks.*;
-import static com.dev.timetracker.mocks.UserMocks.user;
-import static com.dev.timetracker.mocks.UserMocks.userMocks;
+import static com.dev.timetracker.mocks.UserMocks.*;
 import static com.dev.timetracker.security.SecurityConfigTest.basicUser;
 import static com.dev.timetracker.security.SecurityConfigTest.mockLogin;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.httpBasic;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
@@ -82,7 +82,7 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldCreateNewProject() throws Exception {
+    public void createShouldCreateNewProject() throws Exception {
 
         Mockito.when(repositoryProject.findByIdAndActiveTrue(project.getId())).thenReturn(project);
 
@@ -99,7 +99,7 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldReturnProject() throws Exception {
+    public void getShouldReturnProject() throws Exception {
 
         Mockito.when(repositoryProject.findByIdAndActiveTrue(project.getId())).thenReturn(project);
 
@@ -109,11 +109,10 @@ public class ControllerProjectTests {
                         .with(user(basicUser.username()).password(basicUser.cpf())))
                 .andExpect(status().isOk())
                 .andExpect(content().json(responseJson));
-
     }
 
     @Test
-    public void shouldReturnProjectByUserId() throws Exception {
+    public void listShouldReturnProjectByUserId() throws Exception {
 
         List<EntityProject> projects = Arrays.asList(project, project2);
 
@@ -125,11 +124,10 @@ public class ControllerProjectTests {
                         .with(user(basicUser.username()).password(basicUser.cpf())))
                 .andExpect(status().isOk())
                 .andExpect(content().json(responseJson));
-
     }
 
     @Test
-    public void shouldlistReturnProject() throws Exception {
+    public void listShouldReturnProject() throws Exception {
 
         Page<EntityProject> projects = new PageImpl<>(List.of(project, project2));
 
@@ -144,7 +142,7 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldlistAllReturnProjects() throws Exception {
+    public void listAllShouldReturnProjects() throws Exception {
 
         Page<EntityProject> projects = new PageImpl<>(List.of(project, project2));
 
@@ -159,7 +157,7 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldReturnListUsersInProject() throws Exception {
+    public void listUsersShouldReturnUsersInProject() throws Exception {
 
         Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
 
@@ -168,27 +166,27 @@ public class ControllerProjectTests {
                 .andExpect(status().isOk());
     }
 
-//    @Test
-//    public void shouldReturnListTasksInProject() throws Exception {
-//
-//        List<EntityTask> tasks = Arrays.asList(task, task2);
-//
-//        Mockito.when(repositoryTask.findByProjectIdAndActiveTrue(project.getId())).thenReturn(tasks);
-//
-//        String responseJson = new ObjectMapper().writeValueAsString(tasks.stream().map(DTOListTask::new).collect(Collectors.toList()));
-//
-//
-//        mockMvc.perform(get("/projects/" + project.getId() +"/tasks")
-//                        .with(httpBasic(basicUser.username(), basicUser.cpf()))
-//                        .contentType(APPLICATION_JSON))
-//                .andExpect(status().isOk())
-//                .andExpect(content().json(responseJson));
-//    }
+    @Test
+    public void listTasksShouldReturnTasksInProject() throws Exception {
+
+        List<EntityTask> tasks = Arrays.asList(task, task2);
+        List<DTOListTask> dtoTasks = tasks.stream().map(DTOListTask::new).toList();
+
+        Mockito.when(repositoryTask.findByProjectIdAndActiveTrue(project.getId())).thenReturn(tasks);
+
+        String responseJson = objectMapper.writeValueAsString(dtoTasks);
+
+        mockMvc.perform(get("/projects/" + project.getId() + "/tasks")
+                        .with(user(basicUser.username()).password(basicUser.cpf()))
+                        .contentType(APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(content().json(responseJson));
+    }
 
     @Test
-    public void shouldReturnListTasksNoContentInProject() throws Exception {
+    public void listTasksShouldReturnNoContent() throws Exception {
 
-        Mockito.when(repositoryTask.findByProjectIdAndActiveTrue(project.getId())).thenReturn(Arrays.asList());
+        Mockito.when(repositoryTask.findByProjectIdAndActiveTrue(project.getId())).thenReturn(List.of());
 
         mockMvc.perform(get("/projects/" + project.getId() + "/tasks")
                         .with(user(basicUser.username()).password(basicUser.cpf()))
@@ -197,7 +195,23 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldUpdateProject() throws Exception {
+    public void getRakingShouldReturnRanking() throws Exception {
+
+        DTOUserTime userTime = new DTOUserTime("joao", 10L);
+        List<DTOUserTime> ranking = List.of(userTime);
+
+        Mockito.when(reportService.calculateUserTimeRankingForProject(project.getId())).thenReturn(ranking);
+
+        String responseJson = objectMapper.writeValueAsString(ranking);
+
+        mockMvc.perform(get("/projects/" + project.getId() + "/users/report")
+                        .with(user(basicUser.username()).password(basicUser.cpf())))
+                .andExpect(status().isOk())
+                .andExpect(content().json(responseJson));
+    }
+
+    @Test
+    public void updateShouldUpdateProject() throws Exception {
 
         DTOUpdateProject updateProject = new DTOUpdateProject(
                 project.getId(),
@@ -216,24 +230,54 @@ public class ControllerProjectTests {
                         .contentType(APPLICATION_JSON)
                         .content(requestJson))
                 .andExpect(status().isOk());
-
-//        Mockito.verify(projectMock, Mockito.times(1)).update(updateProject);
     }
 
-//    @Test
-//    public void shouldAddUserToProject() throws Exception {
-//
-//        Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(project);
-//        Mockito.when(repositoryUser.getReferenceById(user.getId())).thenReturn(user);
-//
-//        mockMvc.perform(put("/projects/" + project.getId() + "/users/" + user.getId())
-//                        .with(httpBasic(basicUser.username(), basicUser.cpf()))
-//                        .contentType(APPLICATION_JSON))
-//                .andExpect(status().isOk());
-//    }
+    @Test
+    public void addUserShouldAddUserToProject() throws Exception {
+
+        Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
+        Mockito.when(repositoryUser.getReferenceById(user.getId())).thenReturn(userMock);
+
+        mockMvc.perform(put("/projects/" + project.getId() + "/users/" + user.getId())
+                        .with(user(basicUser.username()).password(basicUser.cpf()))
+                        .contentType(APPLICATION_JSON))
+                .andExpect(status().isOk());
+
+        Mockito.verify(projectMock, Mockito.times(1)).setUsers(Mockito.any());
+        Mockito.verify(repositoryProject, Mockito.times(1)).save(Mockito.any());
+    }
 
     @Test
-    public void shouldActivateProject() throws Exception {
+    public void addTaskShouldAddTaskToProject() throws Exception {
+
+        Mockito.when(repositoryProject.findById(project.getId())).thenReturn(Optional.ofNullable(projectMock));
+        Mockito.when(repositoryTask.findById(task.getId())).thenReturn(Optional.ofNullable(taskMock));
+
+        mockMvc.perform(put("/projects/" + project.getId() + "/tasks/" + task.getId())
+                        .with(user(basicUser.username()).password(basicUser.cpf()))
+                        .contentType(APPLICATION_JSON))
+                .andExpect(status().isOk());
+
+        Mockito.verify(repositoryTask, Mockito.times(1)).save(Mockito.any());
+    }
+
+    @Test
+    public void addTagShouldAddTagToProject() throws Exception {
+
+        Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
+
+        mockMvc.perform(put("/projects/" + project.getId() + "/tags")
+                        .with(user(basicUser.username()).password(basicUser.cpf()))
+                        .contentType(APPLICATION_JSON)
+                        .param("tag", Tag.IMPORTANT.toString()))
+                .andExpect(status().isOk());
+
+        Mockito.verify(projectMock, Mockito.times(1)).setTags(Mockito.any());
+        Mockito.verify(repositoryProject, Mockito.times(1)).save(Mockito.any());
+    }
+
+    @Test
+    public void activateShouldActivateProject() throws Exception {
 
         Mockito.when(repositoryProject.getReferenceById(projectMock.getId())).thenReturn(projectMock);
 
@@ -245,7 +289,7 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldInactivateProject() throws Exception {
+    public void inactivateShouldInactivateProject() throws Exception {
 
         Mockito.when(repositoryProject.getReferenceById(projectMock.getId())).thenReturn(projectMock);
 
@@ -257,17 +301,68 @@ public class ControllerProjectTests {
     }
 
     @Test
-    public void shouldDeleteTask() throws Exception {
+    public void deleteShouldDeleteProject() throws Exception {
+
+        Set<EntityTask> tasks = new HashSet<>(List.of(taskMock));
 
         Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
         Mockito.when(repositoryTask.findAllByProjectIdAndActiveTrue(project.getId())).thenReturn(List.of(taskMock));
+        Mockito.when(projectMock.getTasks()).thenReturn(tasks);
 
         mockMvc.perform(delete("/projects/" + project.getId())
                         .with(user(basicUser.username()).password(basicUser.cpf())))
                 .andExpect(status().isOk());
 
-
         Mockito.verify(repositoryProject, Mockito.times(1)).deleteById(project.getId());
-        Mockito.verify(repositoryTask, Mockito.times(0)).save(Mockito.any()); // -> precisa atender mais duas linhas no método 
+        Mockito.verify(repositoryTask, Mockito.times(1)).save(Mockito.any());
+    }
+
+    @Test
+    public void deleteUserShouldDeleteUserFromProject() throws Exception {
+
+        Set<EntityUser> users = new HashSet<>(List.of(userMock));
+
+        Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
+        Mockito.when(repositoryUser.getReferenceById(user.getId())).thenReturn(userMock);
+        Mockito.when(projectMock.getUsers()).thenReturn(users);
+
+        mockMvc.perform(delete("/projects/" + project.getId() + "/users/" + user.getId())
+                        .with(user(basicUser.username()).password(basicUser.cpf())))
+                .andExpect(status().isOk());
+
+        Mockito.verify(repositoryProject, Mockito.times(1)).save(Mockito.any());
+    }
+
+    @Test
+    public void deleteTaskShouldDeleteTaskFromProject() throws Exception {
+
+        Set<EntityTask> tasks = new HashSet<>(List.of(taskMock));
+
+        Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
+        Mockito.when(repositoryTask.getReferenceById(task.getId())).thenReturn(taskMock);
+        Mockito.when(projectMock.getTasks()).thenReturn(tasks);
+
+        mockMvc.perform(delete("/projects/" + project.getId() + "/tasks/" + task.getId())
+                        .with(user(basicUser.username()).password(basicUser.cpf())))
+                .andExpect(status().isOk());
+
+        Mockito.verify(repositoryProject, Mockito.times(1)).save(Mockito.any());
+    }
+
+    @Test
+    public void deleteTagShouldDeleteTagFromProject() throws Exception {
+
+        Set<Tag> tags = new HashSet<>(List.of(Tag.IMPORTANT, Tag.IN_PROGRESS));
+
+        Mockito.when(repositoryProject.getReferenceById(project.getId())).thenReturn(projectMock);
+        Mockito.when(projectMock.getTags()).thenReturn(tags);
+
+        mockMvc.perform(delete("/projects/" + project.getId() + "/tags")
+                        .with(user(basicUser.username()).password(basicUser.cpf()))
+                        .contentType(APPLICATION_JSON)
+                        .param("tag", Tag.IMPORTANT.toString()))
+                .andExpect(status().isOk());
+
+        Mockito.verify(repositoryProject, Mockito.times(1)).save(Mockito.any());
     }
 }
